# conversational_agent_ecommerce

./: .env.example  .gitignore  CONVERSATION_HISTORY_ANALYSIS.md  GROUNDING_IMPLEMENTATION_SUMMARY.md  METADATA_FILTERING_STATUS.md  README.md  STORAGE_COMPARISON.md  pyproject.toml  requirements.txt
.kiro/specs/api-and-ui/: design.md  requirements.md  tasks.md
.kiro/specs/data-inference-pipeline/: design.md  requirements.md  tasks.md
.kiro/specs/data-ingestion-pipeline/: design.md  requirements.md  tasks.md
.kiro/specs/data-retrieval-pipeline/: design.md  requirements.md  tasks.md
.kiro/specs/deployment-devops/: design.md  requirements.md  tasks.md
.kiro/specs/frontend-chatbot/: design.md  requirements.md  tasks.md
.kiro/specs/metadata-filtering-integration/: README.md  design.md  requirements.md  tasks.md
.kiro/specs/multi-turn-conv-improvements/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
config/: development.env  inference.yaml  logging.yaml  production.env  retrieval.yaml
data/: phones_reviews.csv
data/sessions/: sess_20251230_123323_fe755a3c.json  sess_20251230_123402_5d3665cd.json  sess_20251230_123403_c1563343.json  sess_20251230_123809_5bb3376e.json  sess_20251230_123825_6b8ba3a8.json  sess_20251230_124816_43832c40.json  sess_20251230_124846_d99515b1.json  sess_20251230_124854_aa19f7c3.json  sess_20251230_125022_0773247b.json  sess_20251230_125503_8e69619b.json  sess_20251230_125547_0ded9642.json  sess_20251230_125658_a014d5de.json  sess_20251230_130113_2efdbc60.json  sess_20251230_130516_7206e945.json  sess_20251230_130517_e45f7543.json  sess_20251230_130518_a7256f69.json  sess_20251230_130528_856ecbb9.json  sess_20251230_130529_ccdd66e1.json  sess_20251230_131021_df9da93a.json  sess_20251230_131143_86afd549.json  sess_20251230_131208_a066bde5.json  sess_20251230_131231_c53ece4c.json
docs/: CONTEXT_COMPRESSION_EXPLAINED.md  CONVERSATION_FLOW_DIAGRAM.md  GROUNDING_GUIDE.md  GROUNDING_QUICK_REFERENCE.md  README_GROUNDING.md
examples/: grounding_example.py
notebooks/: ecommerce_data.ipynb
scripts/inference/: README.md  benchmark.py  demo.py  interactive.py  quick_test.py  simple_test.py  test_grounding.py
scripts/ingestion/: README.md  chunking_demo.py  complete_ingestion_pipeline_demo.py  reingest_with_normalized_names.py  test_normalization.py  visualize_pipeline.py
scripts/retrieval/: README.md  README_METADATA_INTEGRATION.md  demo_retrieval_pipeline.py  quick_test.py  simple_test.py  test_examples.py  test_metadata_integration.py
src/: __init__.py
src/api/: __init__.py  config.py  dependencies.py  main.py
src/api/models/: __init__.py  schemas.py
src/api/routes/: __init__.py  chat.py  health.py  sessions.py
src/api/services/: __init__.py  session_store.py
src/core/database/: connection.py  models.py
src/core/models/: __init__.py  schemas.py
src/frontend/: __init__.py  app.py  config.py  styles.py
src/frontend/components/: __init__.py  chat_interface.py  session_history.py  session_panel.py
src/frontend/utils/: __init__.py  api_client.py
src/pipelines/inference/: __init__.py  config.py  exceptions.py  grounding.py  logging.py  models.py  pipeline.py
src/pipelines/inference/conversation/: __init__.py  manager.py  store.py
src/pipelines/inference/generation/: __init__.py  (+1 more)
src/pipelines/ingestion/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  pipeline.py
src/pipelines/retrieval/: __init__.py  config.py  exceptions.py  logging.py  models.py  pipeline.py
src/utils/: config.py  exceptions.py  logging.py  pipeline_logging.py
tests/integration/: test_vector_searcher_integration.py
tests/unit/: test_conversation_store.py  test_document_loader.py  test_embedding_generator.py  test_follow_up_routing.py  test_frontend_styles.py  test_inference_basic.py  test_metadata_workflow_step.py  test_pipeline.py  test_query_reformulator.py  test_retrieval_pipeline.py  test_retriever_node.py  test_text_chunker.py  test_text_processor.py  test_vector_searcher.py  test_vector_store.py
(+23 files in other folders)
